# 2023-Capstone-Design

./: LeeGijin.md  README.md  cam123.txt  daidalos99.md  hikvision_C++.txt  hwangyoowhan.md  jjun-ho.md  ksh99.md
Calibration/: HikCamera.cpp  Makefile  Makefile.Debug  Makefile.Release  Stereo_Calibration.pro  Stereo_Calibration.pro.user.02560e6  Stereo_Calibration.pro.user.5591e2b  Stereo_Calibration.pro.user.9e1a030  Stereo_Calibration.pro.user.d429f9a  errorHistory00.txt  imageform.cpp  kfc.h  mainframe.cpp  mainframe.h  mainframe.ui  rv0171.cpp  rv0171.h  serial.cpp  ui_mainframe.h
Daidalos99/: readme.md
Homeworks/: Makefile  Makefile.Release
IronView/: .qmake.stash  0171.h  HikCamera.cpp  HikCamera.h  Makefile  Makefile.Debug  Makefile.Release  cv0171.cpp  cv0171.h  homework.pro  homework.pro.user.5591e2b  homework.pro.user.9e1a030  homework.pro.user.d013fab  homework.pro.user.d429f9a  imageform.cpp  imageform.h  kfc.cpp  kfc.h  mainframe.cpp  mainframe.h  mainframe.ui  object_script.Homework.Debug  object_script.Homework.Release  ui_mainframe.h
IronView/doc/sift/: .hgignore  CMakeLists.txt  FindCUT.cmake  README  match.c
IronView/doc/sift/src/: DoG.c  buildOB.c  buildSS.c  extreme.c  keypoint.c  main.c  ori.c  render.c  sift.c  sift.h
IronView/doc/sift/util/: img_io.c  img_io.h
IronView2/: Makefile  Makefile.Debug  Makefile.Release  classifierCoord.h  error 0 itr.txt  error 1 itr.txt  error 2 itr.txt  error 3 itr.txt  error 5 itr.txt  error 6 itr.txt  error 8 itr.txt  kfc.h  linearTransform.cpp  mainframe.cpp  mainframe.h  mainframe.ui  msjrv.cpp  (+2 more)
(+1381 files in other folders)
