cmake_minimum_required(VERSION 2.8)

PROJECT(ECA_GPU_SIFT)

IF(NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
  SET(CMAKE_C_FLAGS "-Wall -mfpmath=sse -msse -ffast-math")
  SET(CMAKE_CXX_FLAGS "-Wall -mfpmath=sse -msse -ffast-math")
ENDIF(NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")

AUX_SOURCE_DIRECTORY(src  SIFT_SRC_LIST)
AUX_SOURCE_DIRECTORY(util UTIL_SRC_LIST)

INCLUDE_DIRECTORIES(src util)

ADD_EXECUTABLE(eca-sift ${SIFT_SRC_LIST} ${UTIL_SRC_LIST})

IF(NOT MSVC)
  TARGET_LINK_LIBRARIES(eca-sift m)
ENDIF(NOT MSVC)
